# RAG

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/models/: schemas.py
app/services/: chunker.py  generator.py  retriever.py  storage.py
tests/: test_chunker.py
