[project]
name = "vectorless-rag-backend"
version = "0.1.0"
description = "FastAPI backend for large-scale vectorless RAG using MongoDB Atlas and AWS OpenSearch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "motor>=3.5.0",
  "pymongo>=4.8.0",
  "opensearch-py>=2.7.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
